# ImageIdentification

./: .gitignore  pyproject.toml  requirements.txt
imageidentification/: __init__.py  image_search.ipynb  main.py  search.py
imageidentification/maple_or_oak/oakleaf/: 58583880-0fbe-4b93-af11-c0336f2126e7.jfif
