[tool.poetry]
name = "imageidentification"
version = "0.1.0"
description = ""
authors = ["blakedaniel <blake.vanfleteren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckduckgo-search = "^3.9.3"
fastai = "^2.7.13"
python-dotenv = "^1.0.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
duckduckgo-images-api = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
